--- a/confs-apache2/sweethome.backend.biz.conf
+++ b/confs-apache2/sweethome.backend.biz.conf
@@ -1,9 +1,13 @@
 <VirtualHost *:80>
-
-	ServerName sweethome.backend.biz
+	ServerName sweethome-backend.sytes.net
 
 	ServerAdmin k.nogueira@escolar.ifrn.edu.br
-	DocumentRoot /var/www/html/sweethome.backend.biz/
+	DocumentRoot /var/www/html/sweethome.backend.biz
+
+	<Directory /var/www/html/sweethome.backend.biz>
+		AllowOverride All
+		Require all granted
+	</Directory>
 
 	ErrorLog ${APACHE_LOG_DIR}/sweethome.backend.biz/error.log
 	CustomLog ${APACHE_LOG_DIR}/sweethome.backend.biz/access.log combined
