--- a/confs-apache2/sweethome.com.br.conf
+++ b/confs-apache2/sweethome.com.br.conf
@@ -1,9 +1,14 @@
 <VirtualHost *:80>
 
-	ServerName sweethome.com.br
+	ServerName sweethome-frontend.sytes.net
 
 	ServerAdmin k.nogueira@escolar.ifrn.edu.br
-	DocumentRoot /var/www/html/sweethome.com.br/
+	DocumentRoot /var/www/html/sweethome.com.br
+
+	<Directory /var/www/html/sweethome.com.br>
+		AllowOverride All
+		Require all granted
+	</Directory>
 
 	ErrorLog ${APACHE_LOG_DIR}/sweethome.com.br/error.log
 	CustomLog ${APACHE_LOG_DIR}/sweethome.com.br/access.log combined
